--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-  <color name="primary">#E43F3F</color>
-  <color name="primary_dark">#E12929</color>
-  <color name="primary_darker">#CC1D1D</color>
-  <color name="accent">#FFFFFF</color>
+  <color name="primary">#4caf50</color>
+  <color name="primary_dark">#036100</color>
+  <color name="primary_darker">#1dccac</color>
+  <color name="accent">#ffffff</color>
 
   <color name="black">#000000</color>
   <color name="jet">#222222</color>
