--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -2,7 +2,6 @@
 <RelativeLayout
     android:id="@+id/activity_home"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -25,29 +24,27 @@
 
             <TableRow
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:layout_marginBottom="10dp">
 
-                <ImageButton
-                    android:id="@+id/imageButton"
-                    android:layout_width="80dp"
-                    android:layout_height="80dp"
-                    android:scaleX="0.5"
-                    android:scaleY="0.5"
-                    app:srcCompat="@drawable/create_new"/>
-
-                <TextView
-                    android:id="@+id/open_new_room"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:paddingLeft="10dp"
+                <android.support.v7.widget.AppCompatButton
+                    android:id="@+id/btn_createRoom"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@color/button_material_dark"
+                    android:drawableTop="@drawable/_create_room"
+                    android:padding="10dp"
                     android:text="Open a New Room"
-                    android:textSize="36sp"
-                    android:textStyle="normal|bold"/>
+                    android:textSize="22sp"
+                    android:visibility="visible"
+                    />
+
             </TableRow>
 
             <View style="@style/Divider"/>
 
             <ListView
+                android:id="@+id/list_listOfUserRooms"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"/>
         </LinearLayout>
