--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -5,19 +5,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="money.cache.grexActivities.HomeActivity"
-    android:orientation="vertical">
+    tools:context="money.cache.grexActivities.HomeActivity">
 
     <TableRow
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp">
 
-        <android.support.v7.widget.AppCompatButton
+        <Button
             android:id="@+id/btn_createRoom"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
