--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -21,13 +21,9 @@
             android:id="@+id/btn_createRoom"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/button_material_dark"
             android:drawableTop="@drawable/_create_room"
             android:padding="10dp"
-            android:text="Open a New Room"
-            android:textSize="22sp"
-            android:visibility="visible"
-            />
+            android:text="Open a New Room" />
 
     </TableRow>
 
