-Created a user registration test -Made super classes -Made cards as list items

--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -21,76 +21,41 @@
             android:contentDescription="main logo"
             android:src="@drawable/_logo"/>
 
-        <!-- Name Label -->
-        <android.support.design.widget.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_marginTop="8dp">
+
             <EditText android:id="@+id/input_name"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:hint="Username"
                       android:inputType="text"
                       android:maxLines="1"/>
-        </android.support.design.widget.TextInputLayout>
 
-        <!--  Email Label -->
-        <android.support.design.widget.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_marginTop="8dp">
             <EditText android:id="@+id/input_email"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:hint="Email"
                       android:inputType="textEmailAddress"/>
-        </android.support.design.widget.TextInputLayout>
 
-
-        <!-- mobile number -->
-        <android.support.design.widget.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_marginTop="8dp">
             <EditText android:id="@+id/input_mobile"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:hint="Mobile Number"
                       android:inputType="phone"/>
-        </android.support.design.widget.TextInputLayout>
 
-        <!-- Password Label -->
-        <android.support.design.widget.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_marginTop="8dp">
             <EditText android:id="@+id/input_password"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:hint="Password"
                       android:inputType="textPassword"/>
-        </android.support.design.widget.TextInputLayout>
 
-        <!-- Password Re-enter Label -->
-        <android.support.design.widget.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_marginTop="8dp">
             <EditText android:id="@+id/input_reEnterPassword"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:hint="Re-enter Password"
                       android:inputType="textPassword"/>
-        </android.support.design.widget.TextInputLayout>
 
         <!-- Signup Button -->
-        <android.support.v7.widget.AppCompatButton
-            android:id="@+id/btn_upload"
+        <Button
+            android:id="@+id/btn_signUp"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="24dp"
