-Code reconstruction -GrexSocket checks connectivity -Retrieval of room data from server is fixed

--- a/app/src/main/res/drawable/splash_screen.xml
+++ b/app/src/main/res/drawable/splash_screen.xml
@@ -2,12 +2,12 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:drawable="@color/white"/>
+        android:drawable="@color/dark_background"/>
 
     <item>
         <bitmap
             android:gravity="center"
-            android:src="@drawable/_dino_footprint"/>
+            android:src="@drawable/_dinosaur"/>
     </item>
 
 </layer-list>
