--- a/app/src/main/res/layout/activity_create_room.xml
+++ b/app/src/main/res/layout/activity_create_room.xml
@@ -1,25 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--TODO: convert submit button to be a forward facing arrow-->
-<FrameLayout
+<LinearLayout
     android:id="@+id/activity_create_room"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="money.cache.grexActivities.CreateRoomActivity">
+    tools:context="money.cache.grexActivities.CreateRoomActivity"
+    android:orientation="horizontal"
+    android:descendantFocusability="beforeDescendants"
+    android:focusableInTouchMode="true" >
 
-
-    <ImageView
-        android:id="@+id/room_image"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scaleType="centerCrop"
-        app:srcCompat="@drawable/_gas_pump"/>
 
     <ScrollView
         android:layout_width="match_parent"
@@ -43,21 +35,12 @@
                     android:layout_height="wrap_content"
                     android:layout_weight=".5"
                     android:gravity="center"
-                    android:hint="Moment name"
+                    android:hint="Event name"
                     android:inputType="textUri|textPersonName"
                     android:textSize="30sp"
-                    />
+                    android:paddingTop="5dp"
+                    android:paddingBottom="5dp" />
 
-                <ImageButton
-                    android:id="@+id/btn_add_image"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="2.5"
-                    android:adjustViewBounds="false"
-                    android:background="@android:drawable/menuitem_background"
-                    android:cropToPadding="false"
-                    app:srcCompat="@drawable/_add_image"
-                    />
             </TableRow>
 
             <LinearLayout
@@ -66,10 +49,18 @@
                 android:layout_gravity="center"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
-                android:layout_marginTop="30dp"
-                android:background="@color/text_color_primary_light"
                 android:orientation="vertical"
                 android:padding="10dp">
+
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:srcCompat="@drawable/_xlarge_icons_100"
+                    android:id="@+id/create_event_img"
+                    android:foregroundGravity="center"
+                    android:layout_gravity="center" />
+
+                <View style="@style/Divider"/>
 
                 <TableRow
                     android:layout_width="match_parent"
@@ -80,7 +71,6 @@
                         android:id="@+id/imageView3"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight=".5"
                         app:srcCompat="@drawable/_vis"/>
 
                     <Switch
@@ -90,7 +80,8 @@
                         android:layout_weight=".5"
                         android:checked="true"
                         android:textOff="Private"
-                        android:textOn="Public" />
+                        android:textOn="Public"
+                        android:gravity="center" />
 
                 </TableRow>
 
@@ -201,7 +192,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:adjustViewBounds="false"
-                        app:srcCompat="@drawable/_ok"/>
+                        app:srcCompat="@drawable/_ok"
+                        android:background="@android:color/transparent" />
 
                 </TableRow>
 
@@ -210,4 +202,4 @@
         </LinearLayout>
     </ScrollView>
 
-</FrameLayout>
+</LinearLayout>
